@@ -17,8 +17,7 @@ Disassembly of section \.text:
 .*SPU_REL16	f2_a1
 .*	brsl	\$0,.* <00000000\.ovl_call\.f1_a2>.*
 .*SPU_REL16	f1_a2
-#.*	ila	\$9,328	# 148
-.*	ila	\$9,352	# 160
+.*	ila	\$9,.*
 .*SPU_ADDR18	f2_a2
 .*	bisl	\$0,\$9
 .*	ai	\$1,\$1,32	# 20
@@ -28,66 +27,6 @@ Disassembly of section \.text:
 0000012c <f0>:
 .*	bi	\$0
 
-#00000130 <00000000\.ovl_call\.f1_a1>:
-#.*	bra?sl	\$75,.* <__ovly_load>.*
-#.*00 04 04 00.*
-#
-#00000138 <00000000\.ovl_call\.f2_a1>:
-#.*	bra?sl	\$75,.* <__ovly_load>.*
-#.*00 04 04 04.*
-#
-#00000140 <00000000\.ovl_call\.f1_a2>:
-#.*	bra?sl	\$75,.* <__ovly_load>.*
-#.*00 08 04 00.*
-#
-#00000148 <00000000\.ovl_call\.f2_a2>:
-#.*	bra?sl	\$75,.* <__ovly_load>.*
-#.*00 08 04 24.*
-#
-#00000150 <00000000\.ovl_call\.f4_a1>:
-#.*	bra?sl	\$75,.* <__ovly_load>.*
-#.*00 04 04 10.*
-#
-#00000158 <00000000.ovl_call.14:8>:
-#.*	bra?sl	\$75,.* <__ovly_load>.*
-#.*00 08 04 34.*
-
-00000130 <00000000\.ovl_call\.f1_a1>:
-.*	ila	\$78,1
-.*	lnop
-.*	ila	\$79,1024	# 400
-.*	bra?	.* <__ovly_load>.*
-
-00000140 <00000000\.ovl_call\.f2_a1>:
-.*	ila	\$78,1
-.*	lnop
-.*	ila	\$79,1028	# 404
-.*	bra?	.* <__ovly_load>.*
-
-00000150 <00000000.ovl_call.f1_a2>:
-.*	ila	\$78,2
-.*	lnop
-.*	ila	\$79,1024	# 400
-.*	bra?	.* <__ovly_load>.*
-
-00000160 <00000000\.ovl_call\.f2_a2>:
-.*	ila	\$78,2
-.*	lnop
-.*	ila	\$79,1060	# 424
-.*	bra?	.* <__ovly_load>.*
-
-00000170 <00000000\.ovl_call\.f4_a1>:
-.*	ila	\$78,1
-.*	lnop
-.*	ila	\$79,1040	# 410
-.*	bra?	.* <__ovly_load>.*
-
-00000180 <00000000.ovl_call.14:8>:
-.*	ila	\$78,2
-.*	lnop
-.*	ila	\$79,1076	# 434
-.*	bra?	.* <__ovly_load>.*
-
 #...
 [0-9a-f]+ <__ovly_return>:
 #...
@@ -95,6 +34,66 @@ Disassembly of section \.text:
 #...
 [0-9a-f]+ <_ovly_debug_event>:
 #...
+00000330 <00000000\.ovl_call\.f1_a1>:
+.*	ila	\$78,1
+.*	lnop
+.*	ila	\$79,1024	# 400
+.*	bra?	.* <__ovly_load>.*
+
+00000340 <00000000\.ovl_call\.f2_a1>:
+.*	ila	\$78,1
+.*	lnop
+.*	ila	\$79,1028	# 404
+.*	bra?	.* <__ovly_load>.*
+
+00000350 <00000000.ovl_call.f1_a2>:
+.*	ila	\$78,2
+.*	lnop
+.*	ila	\$79,1024	# 400
+.*	bra?	.* <__ovly_load>.*
+
+00000360 <00000000\.ovl_call\.f2_a2>:
+.*	ila	\$78,2
+.*	lnop
+.*	ila	\$79,1060	# 424
+.*	bra?	.* <__ovly_load>.*
+
+00000370 <00000000\.ovl_call\.f4_a1>:
+.*	ila	\$78,1
+.*	lnop
+.*	ila	\$79,1040	# 410
+.*	bra?	.* <__ovly_load>.*
+
+00000380 <00000000.ovl_call.14:8>:
+.*	ila	\$78,2
+.*	lnop
+.*	ila	\$79,1076	# 434
+.*	bra?	.* <__ovly_load>.*
+
+#00000330 <00000000\.ovl_call\.f1_a1>:
+#.*	bra?sl	\$75,.* <__ovly_load>.*
+#.*00 04 04 00.*
+#
+#00000338 <00000000\.ovl_call\.f2_a1>:
+#.*	bra?sl	\$75,.* <__ovly_load>.*
+#.*00 04 04 04.*
+#
+#00000340 <00000000\.ovl_call\.f1_a2>:
+#.*	bra?sl	\$75,.* <__ovly_load>.*
+#.*00 08 04 00.*
+#
+#00000348 <00000000\.ovl_call\.f2_a2>:
+#.*	bra?sl	\$75,.* <__ovly_load>.*
+#.*00 08 04 24.*
+#
+#00000350 <00000000\.ovl_call\.f4_a1>:
+#.*	bra?sl	\$75,.* <__ovly_load>.*
+#.*00 04 04 10.*
+#
+#00000358 <00000000.ovl_call.14:8>:
+#.*	bra?sl	\$75,.* <__ovly_load>.*
+#.*00 08 04 34.*
+
 Disassembly of section \.ov_a1:
 
 00000400 <f1_a1>:
@@ -102,8 +101,7 @@ Disassembly of section \.ov_a1:
 .*SPU_REL16	f3_a1
 
 00000404 <f2_a1>:
-#.*	ila	\$3,336	# 150
-.*	ila	\$3,368	# 170
+.*	ila	\$3,.*
 .*SPU_ADDR18	f4_a1
 .*	bi	\$0
 
@@ -121,19 +119,18 @@ Disassembly of section \.ov_a2:
 .*	ai	\$1,\$1,-32
 .*	brsl	\$0,12c <f0>	# 12c
 .*SPU_REL16	f0
-.*	brsl	\$0,130 <00000000\.ovl_call\.f1_a1>	# 130
+.*	brsl	\$0,.* <00000000\.ovl_call\.f1_a1>.*
 .*SPU_REL16	f1_a1
-.*	brsl	\$0,430 <f3_a2>	# 430
+.*	brsl	\$0,.* <f3_a2>.*
 .*SPU_REL16	f3_a2
 .*	lqd	\$0,48\(\$1\)	# 30
 .*	ai	\$1,\$1,32	# 20
 .*	bi	\$0
 
 00000424 <f2_a2>:
-.*	ilhu	\$3,0
+.*	ilhu	\$3,.*
 .*SPU_ADDR16_HI	f4_a2
-#.*	iohl	\$3,344	# 158
-.*	iohl	\$3,384	# 180
+.*	iohl	\$3,.*
 .*SPU_ADDR16_LO	f4_a2
 .*	bi	\$0
 
